styles/scss/main.scss
@use "./variable.scss";
@use "home-page";
@use "./navbar";
@use "./page-header";
@use "./footer";
@use "./team-card";
@use "./animation";
@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap");

.title {
  font-family: "Roboto Slab", serif;
  font-optical-sizing: auto;
  font-size: 50px;
  font-weight: 900;
  width: fit-content;
  padding: 4px 24px;
  border-radius: 16px;
  @media (max-width: 576px) {
    font-size: 20px;
    text-align: center;
    padding-left: 0;
    padding-right: 0;
  }
}

.section-title {
  font-family: "Roboto Slab", serif;
  font-size: 40px;
  font-weight: 700;
  color: variable.$primary;
  @media (max-width: 576px) {
    text-align: center;
    font-size: 32px;
  }
}

.custom-icon {
  background-color: variable.$lightPrimary;
  padding: 4px;
  border-radius: 50%;
  color: variable.$primary;
  width: 36px;
  height: 36px;
}

.content {
  p {
    margin-bottom: 16px;
  }
  &-title {
    color: variable.$primary;
    font-size: 24px;
    font-weight: 600;
  }
}

